--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div><!-- product-pricing -->
 
       <div class="product-cart-button">
-        <button><img class="cart-icon" src="./images/icon-cart.svg">Add to Cart</button>
+        <button><img class="cart-icon" src="images/icon-cart.svg">Add to Cart</button>
       </div><!-- product-cart-button -->
     
       
